<resources>
    <string name="app_name">PigeoTalk</string>

    <string name="action_next">NEXT</string>
    <string name="action_ok">OK</string>
    <string name="action_edit">EDIT</string>
    <string name="action_resend_sms_code">RESEND CODE</string>
    <string name="action_continue">CONTINUE</string>
    <string name="action_not_now">NOT NOW</string>
    <string name="action_yes">YES</string>
    <string name="action_no">NO</string>
    <string name="action_add">ADD</string>
    <string name="action_done">DONE</string>
    <string name="action_save">SAVE</string>
    <string name="action_change">CHANGE</string>

    <string name="EMPTY_STRING" />
    <string name="title_chats">CHATS</string>
    <string name="title_calls">CALLS</string>
    <string name="title_status">STATUS</string>
    <string name="title_groups">GROUPS</string>

    <string name="title_settings">Settings</string>
    <string name="title_select_contact">Select contact</string>
    <string name="title_select_participants">Select participants</string>
    <string name="title_create_new_group">Create a new group</string>

    <string name="hint_example_phone_number">E.g. 555 555 1234</string>
    <string name="hint_country_code">+0</string>
    <string name="hint_type_your_name">Type your name here</string>

    <string name="dialog_confirm_number"><![CDATA[We will be verifying the phone number: <br/><br/><b>
    %1$s </b><br/><br/> Is this OK, or would you like to edit the number?"]]></string>

    <string name="dialog_permission_camera_explanation">To capture photos and videos, allow PigeoTalk
    access to your camera.</string>

    <string name="dialog_permission_read_contacts_explanation">To easily message friends and family
        on PigeoTalk, allow PigeoTalk access to your contacts.</string>

    <string name="text_sms_charge_info">PigeoTalk Messenger will send a one time SMS message to
    verify your phone number. Please note that carrier SMS charges may apply.</string>

    <string name="text_confirm_country_and_enter">Please confirm your country code and enter your
    phone number.</string>

    <string name="text_invalid_number">Please enter a valid phone number.</string>

    <string name="text_verify_your_phone_number">Verify your phone number</string>

    <string name="text_sent_sms_info">We have sent you a one time SMS message with a code to the
        number above.\n\nTo complete your phone number verification, please enter your 6-digit
        verification code.</string>

    <string name="text_profile_info">Profile Info</string>
    <string name="text_provide_name_and_photo">Please provide your name and an optional profile photo</string>
    <string name="text_user_name_cannot_be_empty">Please type your name before continuing with registration.</string>
    <string name="text_group_name_cannot_be_empty">Please provide a group name.</string>

    <string name="text_share_group_id"><![CDATA[Share this code with your friends so they can join your group!
    <br/><br/><b>%1$s</b><br/><br/>You can find the PigeoID of your group in the group info.]]></string>

    <string name="text_colored_name">%1$s</string>

    <string name="text_paste_the_group_id">Paste the PigeoID of the group you want to join here.</string>
    <string name="text_invalid_pigeoid">This is not a valid PigeoID.</string>

    <string name="text_take_a_photo">Take a photo</string>
    <string name="text_choose_from_gallery">Choose from Photo Library</string>

    <string name="text_profile_photo_upload_failed">Something went wrong setting your profile photo.
        Please try again in a minute or try choosing a different photo.</string>

    <string name="text_verify_phone_number_failed">We are currently unable to reach FirebaseAuth servers.
        Please try again later with a new verification code.</string>

    <string name="text_profile_update_request_failed">Something went wrong setting your profile info.
    Please try again in a minute.</string>

    <string name="text_verify_sms_request_info">You can request a new verification code in %1$d second(s).</string>
    <string name="text_verify_sms_request_now">You can request a new verification code now.</string>

    <string name="subtitle_contact_size">%1$d contacts</string>

    <string name="text_no_contacts_using_pigeotalk">No one in your contact list seems to be on PigeoTalk.
    Tap here to invite your friends and family to PigeoTalk.</string>

    <string name="text_start_new_conversation">Once you start a new conversation, you\'ll see it listed here.</string>
    <string name="text_start_new_group">Once you create or join a group, you\'ll see it listed here.</string>
    <string name="text_new_status">Your contact\'s status updates will be shown here.</string>

    <string name="text_invite_to_pigeotalk">Invite friends and family to PigeoTalk</string>

    <string name="text_invite_message">Check out PigeoTalk. I use it to message and call the people I care about.
    Get it for free at https://pigeotalk.com/dl/</string>

    <string name="text_type_a_message">Type a message</string>

    <string name="text_menu_refresh">Refresh</string>
    <string name="text_menu_voice_call">Voice Call</string>
    <string name="text_menu_video_Call">Video Call</string>
    <string name="text_menu_contact_info">Contact Info</string>
    <string name="text_menu_group_info">Group Info</string>

    <string name="text_online">online</string>
    <string name="text_last_seen">last seen %1$s</string>

    <string name="text_provide_group_name">Provide a group name and optional group photo</string>
    <string name="text_type_your_group_name_here">Type your group name here</string>

    <string name="text_photo">Photo</string>
    <string name="text_account">Account</string>
    <string name="text_phone_and_status">Phone and status</string>
    <string name="text_about_and_help">About and help</string>

    <string name="text_not_your_username">This is not your username or pin. This name will be visible to your PigeoTalk contacts.</string>

    <string name="text_member_count">%1$d member(s)</string>
    <string name="text_members">Members</string>

    <string name="dialog_remove_group_member">Do you want to remove this person from this group?</string>

    <string name="text_my_status">My Status</string>
    <string name="text_tap_add_status">tap add to add to your status</string>
    <string name="text_recent_updates">Recent updates</string>
</resources>
